--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,4 @@
+[![Build Status](https://dev.azure.com/prasannagardas9/DevopsLearning/_apis/build/status%2FGitprasannag17.java17-examples?branchName=master)](https://dev.azure.com/prasannagardas9/DevopsLearning/_build/latest?definitionId=7&branchName=master)
 = Java 17 Examples
 :sectlinks:
 :sectnums:
